# Governed-Clinical-Analytics-Copilot

./: .gitignore  .pre-commit-config.yaml  COLAB.md  DATA_INTEGRITY_REPORT.md  Dockerfile  FINETUNING_JUSTIFICATION.md  PLAN.md  PROGRESS.md  README.md  RETRIEVAL.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml
LICENSES/: CC-BY-4.0.txt  MIT.txt  ODbL-1.0.txt
colab/: EHRCopilot_ORPO_v4.ipynb  OmniSQL_EHRSQL_Eval.ipynb  OmniSQL_ORPO_Train.ipynb  OmniSQL_SFT_Train.ipynb  checkpoint_orpo_v3.z03  system_prompt.json
data/pairs/: omnisql_orpo_pairs.jsonl  orpo_v5_abstention_pairs.jsonl
docs/: cache_metrics.md  diagnostic_report_2026-06-28.md  guardrail_metrics.md  sota_analysis_ehrsql2024.md
notebooks/: gemma4_finetune_eval_colab.ipynb  gemma_finetune_colab.ipynb
outputs/: omnisql_7b_results.json
scripts/: build_omnisql_orpo_pairs.py  build_omnisql_sft_data.py  build_orpo_v4_pairs.sh  eval_retrieval.sh  export_submission.py  omnisql_colab_eval.py  prepare_colab_bundle.sh  quick_eval_adapter.py  run_build_pairs_v5.sh  run_ehrsql2024_finetune.sh  run_gemma_finetune.sh  run_gemma_pipeline.sh  run_grpo.sh  run_omnisql_eval.sh  run_orpo_v4.sh  run_orpo_v5.sh  run_quick_eval.sh  run_retrieval_ablation.sh  run_sft_eval.sh  train_pipeline.sh
scripts/eda/: analyze_gate.py  calibrate_gate.py
src/ehrcopilot/: config.py
src/ehrcopilot/agents/: graph.py  state.py
src/ehrcopilot/db/: build_sqlite.py  build_sqlite.sh  connection.py
src/ehrcopilot/eval/: ehrsql2024_scoring.py  eval2024.py  harness.py  prompting_experiments.py  rag_eval.py  rag_ragas.py  retrieval_bench.py  template_retriever.py
src/ehrcopilot/evalgen/: generator.py
src/ehrcopilot/finetune/: _gemma_compat.py  abstention_dpo.py  augment_ehrsql2024.py  build_pairs.py  grpo_train.py  prepare_sft.py  qlora_sft.py
src/ehrcopilot/guardrails/: layers.py
src/ehrcopilot/serve/: app.py  quantize.py
tests/: test_scoring_locked.py
tests/evalgen/: baseline_results.json  baselines.json  dpo_results.json  gemma_ex_classifier.json  gemma_ex_hybrid.json  gemma_ex_zeroshot.json  gemma_orpo_ex_full.json  gemma_orpo_ex_subset.json  gemma_sft_ex.json  orpo_v3_repair_rag_results.json  orpo_v3_results.json  orpo_v4_ckpt224_results.json  orpo_v4_colab_results.json  orpo_v4_ehrsql2024_results.json  orpo_v4_test_corrected.json  orpo_v4_test_entropy.json  orpo_v4_valid_entropy.json  prompting_experiments.json  rag_eval_rerank_100_results.json  rag_eval_rerank_500_results.json  rag_eval_reranking_study.json  rag_eval_results.json  rag_eval_results_mimic_iv.json  rag_eval_results_mimic_iv_v2.json  retrieval_bench_full.json  retrieval_bench_mqs.json  sft_results.json  suite_v1.jsonl  suite_v2.jsonl
(+13 files in other folders)
